# obsdian2anki

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: obsidian2anki.py
tests/: test.py
